[gd_scene load_steps=16 format=3 uid="uid://d1qdod0kfc0ko"]

[ext_resource type="Script" path="res://assets/scripts/enemy.gd" id="1_lalrq"]
[ext_resource type="Texture2D" uid="uid://b7mybcv46hhe3" path="res://assets/images/enemy1.png" id="2_7xrll"]
[ext_resource type="Texture2D" uid="uid://cumseu4qnvck3" path="res://assets/images/enemy2.png" id="3_kx5a4"]
[ext_resource type="Texture2D" uid="uid://cbmxjbatkv4sd" path="res://assets/images/enemy3.png" id="4_t733i"]
[ext_resource type="Texture2D" uid="uid://bvm38bnu8al8n" path="res://assets/images/enemy4.png" id="5_477u2"]
[ext_resource type="Texture2D" uid="uid://cr0704qyl0hoy" path="res://assets/images/enemy5.png" id="6_8a7eb"]
[ext_resource type="Texture2D" uid="uid://j2ujceolnj0r" path="res://assets/images/explosion1.png" id="7_mjso8"]
[ext_resource type="Texture2D" uid="uid://owa55mfvuiv" path="res://assets/images/explosion2.png" id="8_nlehx"]
[ext_resource type="Texture2D" uid="uid://ba4hi4oqee66v" path="res://assets/images/explosion3.png" id="9_2nadn"]
[ext_resource type="Texture2D" uid="uid://o41e4if1euih" path="res://assets/images/explosion4.png" id="10_4skj5"]
[ext_resource type="Texture2D" uid="uid://cm4vh0x3o1qe0" path="res://assets/images/explosion5.png" id="11_elll8"]
[ext_resource type="AudioStream" uid="uid://blq4ggf6foype" path="res://assets/audio/explosion.wav" id="12_lnhbs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mdyb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7xrll")
}, {
"duration": 1.0,
"texture": ExtResource("3_kx5a4")
}, {
"duration": 1.0,
"texture": ExtResource("4_t733i")
}, {
"duration": 1.0,
"texture": ExtResource("5_477u2")
}, {
"duration": 1.0,
"texture": ExtResource("6_8a7eb")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s15b7"]
size = Vector2(20, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hia5h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_mjso8")
}, {
"duration": 1.0,
"texture": ExtResource("8_nlehx")
}, {
"duration": 1.0,
"texture": ExtResource("9_2nadn")
}, {
"duration": 1.0,
"texture": ExtResource("10_4skj5")
}, {
"duration": 1.0,
"texture": ExtResource("11_elll8")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Explotion",
"speed": 10.0
}]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_lalrq")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_mdyb1")
animation = &"Fly"
autoplay = "Fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_s15b7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Area2D"]
position = Vector2(0, 1.19209e-07)
scale = Vector2(1, 1.3)

[node name="Explotion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hia5h")
animation = &"Explotion"

[node name="Audio" type="AudioStreamPlayer" parent="Explotion"]
stream = ExtResource("12_lnhbs")
volume_db = -15.826

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="Area2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="Explotion/Audio" to="." method="_on_audio_finished"]
